- NetFx target is now conditional for Windows builds only, to allow easier development work on nonwindows platforms. #264
- MetricPusher now supports a callback for logging push errors. #186
- Added support for defining static labels on registry or metric level. #256
- Added ICollectorRegistry and IMetricFactory for mocking in test code. #268
* 4.0.0
- Allow arbitrary ASP.NET Core route parameters to be exposed as HTTP metric labels. #225
- Breaking change: some HTTP metrics implementation classes were changed from public to internal. They were never supposed to be public and hopefully nobody ever used them directly. Public documented API did not change.
- Add HttpClient metrics with IHttpClientFactory integration.
* 3.6.0
- Added ASP.NET Core health check publisher for publishing metrics on health check status. #203 #209
- Fixed hang in ASP.NET Web API exporter. #215
- Fixed ASP.NET Web API exporter exporting metrics from the wrong registry. #217
- Reduced memory use in MetricPusher implementation. Inspired by #208
- Added basic gRPC service metrics support. #212
- Reduce pointless log spam on cancelled scrapes - will silently ignore cancelled scrapes in the ASP.NET Core exporter. #220
* 3.5.0
- Exposed metric.Unpublish() method since there was already a matching Publish() there.
- When the scrape is aborted, stop collecting/serializing metrics. #189
- Added simple metric export handler for legacy ASP.NET Web API, to avoid having to deal with HttpListener complexity.
* 3.4.0
- Separate packaging for ASP.NET Core 3 to reduce package reference management complexity for users. #164
- Lazy-initialize the default sample metrics to reduce initialization cost for those who do not need them. #170
- ASP.NET Core middlware no longer disposes of output stream. #171
- Fix DotNetStats occasional data tearing under parallel collections. #173
- Improved wording of some error messages. #169
- Added Counter.IncTo(), Gauge.IncTo(), Gauge.DecTo(). #181