@@ -7,6 +7,12 @@ namespace Prometheus.HttpMetrics
         public HttpRequestDurationOptions RequestDuration { get; set; } = new HttpRequestDurationOptions();
 
         /// <summary>
+        /// Whether to capture metrics for queries to the /metrics endpoint (where metrics are exported by default). Defaults to false.
+        /// This matches against URLs starting with the /metrics string specifically - if you use a custom metrics endpoint, this will not match.
+        /// </summary>
+        public bool CaptureMetricsUrl { get; set; }
+
+        /// <summary>
         /// Adds an additional route parameter to all the HTTP metrics.
         /// 
         /// Helper method to avoid manually adding it to each one.
